--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "./certificates/acme.json:/certificates/acme.json:rw"
     environment:
       - CF_API_EMAIL=${CF_API_EMAIL}
-      - CF_API_KEY=${CF_API_KEY}
+      - CF_API_KEY=${TOKEN}
     command:
       - "--log.level=DEBUG"
       - "--api.insecure=false"
@@ -34,7 +34,7 @@ services:
         # Dashboard
       - "traefik.enable=true"
       - "traefik.http.routers.dashboard.service=api@internal"
-      - "traefik.http.routers.dashboard.rule=Host(`traefik.thibaut-husser.com`)"
+      - "traefik.http.routers.dashboard.rule=Host(`traefik.thibaut-husser.com`, `www.traefik.thibaut-husser.com`)"
       - "traefik.http.routers.dashboard.entrypoints=web, websecure"
       - "traefik.http.routers.dashboard.tls.certresolver=letsencrypt-flare"
       - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
@@ -50,7 +50,7 @@ services:
       - ./nginx/nginx-nas.conf:/etc/nginx/conf.d/default.conf
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.nginx-nas.rule=Host(`nas.thibaut-husser.com`)"
+      - "traefik.http.routers.nginx-nas.rule=Host(`nas.thibaut-husser.com`, `www.nas.thibaut-husser.com`)"
       - "traefik.http.routers.nginx-nas.entrypoints=web,websecure"
       - "traefik.http.routers.nginx-nas.tls.certresolver=letsencrypt-flare"
       - "traefik.http.routers.nginx-nas.middlewares=nginx-redirect-to-https"
@@ -65,7 +65,7 @@ services:
       - ./nginx/nginx-proxmox.conf:/etc/nginx/conf.d/default.conf
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.nginx-proxy.rule=Host(`proxmox.thibaut-husser.com`)"
+      - "traefik.http.routers.nginx-proxy.rule=Host(`proxmox.thibaut-husser.com`, `www.proxmox.thibaut-husser.com`)"
       - "traefik.http.routers.nginx-proxy.entrypoints=web,websecure"
       - "traefik.http.routers.nginx-proxy.tls.certresolver=letsencrypt-flare"
       - "traefik.http.routers.nginx-proxy.middlewares=nginx-redirect-to-https"
