--- a/deploy.yml
+++ b/deploy.yml
@@ -6,11 +6,6 @@
     - name: Update system
       command: apt update
 
-    - name: Ensure git is installed
-      apt:
-        name: git
-        state: present
-
     - name: Ensure docker is installed
       apt:
         name: docker.io
@@ -32,7 +27,47 @@
         src: ./app/
         dest: "/home/{{ ansible_ssh_user }}/traefik-host"
 
-    - name: Run docker-compose
+    - name: Copying ddns in ubuntu-docker
+      become: false
+      synchronize:
+        src: ./ddns/
+        dest: "/home/{{ ansible_ssh_user }}/ddns-host"
+
+    - name: Execute ddns startup script
+      command: bash /home/{{ ansible_ssh_user }}/ddns-host/conf/startup.sh
+
+    - name: Change owner of ddns/conf/data directory
+      file:
+        path: /home/{{ ansible_ssh_user }}/ddns-host/conf/data
+        owner: 1000
+        recurse: yes
+
+    - name: Update permissions of ddns/conf/data directory
+      file:
+        path: /home/{{ ansible_ssh_user }}/ddns-host/conf/data
+        mode: '0777'
+
+    - name: Update permissions of ddns/conf/data/config.json file
+      file:
+        path: /home/{{ ansible_ssh_user }}/ddns-host/conf/data/config.json
+        mode: '0777'
+
+    - name: Stop docker-compose for ddns
+      docker_compose:
+        project_src: '/home/{{ ansible_ssh_user }}/ddns-host'
+        state: absent
+
+    - name: Start docker-compose for ddns
+      docker_compose:
+        project_src: '/home/{{ ansible_ssh_user }}/ddns-host'
+        state: present
+
+    - name: Stop docker-compose for app
+      docker_compose:
+        project_src: '/home/{{ ansible_ssh_user }}/traefik-host'
+        state: absent
+
+    - name: Start docker-compose for app
       docker_compose:
         project_src: '/home/{{ ansible_ssh_user }}/traefik-host'
         state: present
