--- a/deploy.yml
+++ b/deploy.yml
@@ -26,6 +26,27 @@
       synchronize:
         src: ./app/
         dest: "/home/{{ ansible_ssh_user }}/traefik-host"
+        rsync_opts:
+          - "--exclude=certificates/acme.json"
+
+    - name: Check if certificates/acme.json exists and is not empty
+      become: false
+      stat:
+        path: "/home/{{ ansible_ssh_user }}/traefik-host/certificates/acme.json"
+      register: acme_file
+
+    - name: Synchronize certificates/acme.json if it doesn't exist or is empty
+      become: false
+      synchronize:
+        src: ./app/certificates/acme.json
+        dest: "/home/{{ ansible_ssh_user }}/traefik-host/certificates/acme.json"
+      when: not acme_file.stat.exists or acme_file.stat.size == 0
+
+    - name: Set permissions to 600 for acme.json if it was just created
+      file:
+        path: "/home/{{ ansible_ssh_user }}/traefik-host/certificates/acme.json"
+        mode: '0600'
+      when: not acme_file.stat.exists
 
     - name: Copying ddns in ubuntu-docker
       become: false
