--- a/app/nginx/nginx-proxmox.conf
+++ b/app/nginx/nginx-proxmox.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-
+	client_max_body_size 10000M;
     location / {
         proxy_pass https://192.168.1.78:8006;
         proxy_set_header Host $host;
