redirection on old hostname

--- a/deploy.yml
+++ b/deploy.yml
@@ -28,6 +28,7 @@
         dest: "/home/{{ ansible_ssh_user }}/traefik-host"
         rsync_opts:
           - "--exclude=certificates/acme.json"
+          - "--exclude=certificates/acme-home.json"
 
     - name: Check if certificates/acme.json exists and is not empty
       become: false
@@ -35,12 +36,31 @@
         path: "/home/{{ ansible_ssh_user }}/traefik-host/certificates/acme.json"
       register: acme_file
 
+    - name: Check if certificates/acme-home.json exists and is not empty
+      become: false
+      stat:
+        path: "/home/{{ ansible_ssh_user }}/traefik-host/certificates/acme-home.json"
+      register: acme_home
+
     - name: Synchronize certificates/acme.json if it doesn't exist or is empty
       become: false
       synchronize:
         src: ./app/certificates/acme.json
         dest: "/home/{{ ansible_ssh_user }}/traefik-host/certificates/acme.json"
       when: not acme_file.stat.exists or acme_file.stat.size == 0
+
+    - name: Synchronize certificates/acme-home.json if it doesn't exist or is empty
+      become: false
+      synchronize:
+        src: ./app/certificates/acme-home.json
+        dest: "/home/{{ ansible_ssh_user }}/traefik-host/certificates/acme-home.json"
+      when: not acme_home.stat.exists or acme_home.stat.size == 0
+
+    - name: Set permissions to 600 for acme-home.json if it was just created
+      file:
+        path: "/home/{{ ansible_ssh_user }}/traefik-host/certificates/acme-home.json"
+        mode: '0600'
+      when: not acme_home.stat.exists
 
     - name: Set permissions to 600 for acme.json if it was just created
       file:
