--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "./certificates/acme.json:/certificates/acme.json:rw"
+      - "./certificates/acme.json:/certificates/acme-home.json:rw"
     environment:
       - CF_API_EMAIL=${CF_API_EMAIL}
       - CF_API_KEY=${CF_API_TOKEN}
@@ -30,6 +31,10 @@ services:
       - "--certificatesresolvers.letsencrypt-flare.acme.dnsChallenge.provider=cloudflare"
       - "--certificatesresolvers.letsencrypt-flare.acme.dnsChallenge.delayBeforeCheck=0"
       - "--certificatesresolvers.letsencrypt-flare.acme.dnsChallenge.resolvers=1.1.1.1:53,1.0.0.1:53"
+      - "--certificatesresolvers.letsencrypt-home.acme.email=${ACME_EMAIL}"
+      - "--certificatesresolvers.letsencrypt-home.acme.storage=/certificates/acme-http.json"
+      - "--certificatesresolvers.letsencrypt-home.acme.caServer=https://acme-v02.api.letsencrypt.org/directory"
+      - "--certificatesresolvers.letsencrypt-home.acme.httpChallenge.entrypoint=web"
     labels:
         # Dashboard
       - "traefik.enable=true"
@@ -62,6 +67,8 @@ services:
       - "traefik.http.middlewares.nginx-redirect-to-https.redirectscheme.permanent=true"
         # Redirect homethibaut.synology.me
       - "traefik.http.routers.redirect-homethibaut.rule=Host(`homethibaut.synology.me`)"
+      - "traefik.http.routers.redirect-homethibaut.entrypoints=web,websecure"
+      - "traefik.http.routers.redirect-homethibaut.tls.certresolver=letsencrypt-home"
       - "traefik.http.routers.redirect-homethibaut.middlewares=redirect-homethibaut-to-nas"
       - "traefik.http.routers.redirect-homethibaut.priority=10"
 
