--- a/app/nginx/nginx-bitwarden.conf
+++ b/app/nginx/nginx-bitwarden.conf
@@ -1,11 +1,14 @@
 server {
     listen 80;
-	client_max_body_size 10000M;
+	# client_max_body_size 10000M;
     location / {
-        proxy_pass https://192.168.1.84;
+        proxy_pass http://192.168.1.93:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto $scheme;
+		proxy_set_header X-Forwarded-Host $server_name;
+		proxy_set_header X-Forwarded-Ssl on;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection "upgrade";
