--- a/app/nginx/nginx-portainer.conf
+++ b/app/nginx/nginx-portainer.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
-	client_max_body_size 10000M;
+	# client_max_body_size 10000M;
     location / {
-        proxy_pass http://192.168.1.93:8008;
+        proxy_pass http://192.168.1.93:9000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
