--- a/app/nginx/nginx-nextcloud.conf
+++ b/app/nginx/nginx-nextcloud.conf
@@ -1,10 +1,18 @@
 server {
     listen 80;
-	client_max_body_size 10000M;
+    client_max_body_size 10000M;
+
     location / {
         proxy_pass http://192.168.1.84:9001;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    location = /.well-known/carddav {
+        return 301 $scheme://$host/remote.php/dav;
+    }
+    location = /.well-known/caldav {
+        return 301 $scheme://$host/remote.php/dav;
     }
 }
