--- a/deploy-traefik.yml
+++ b/deploy-traefik.yml
@@ -1,6 +1,8 @@
 ---
 - name: Deploy Docker Compose traefik
   hosts: ubuntu-docker
+  vars_files:
+    - secrest.yml
   become: true
   tasks:
     - name: Update system
