--- a/app/nginx/nginx-nextcloud.conf
+++ b/app/nginx/nginx-nextcloud.conf
@@ -8,11 +8,13 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+		proxy_set_header X-Forwarded-Ssl $http_x_forwarded_ssl;
     }
-    location = /.well-known/carddav {
-        return 301 $scheme://$host/remote.php/dav;
-    }
-    location = /.well-known/caldav {
-        return 301 $scheme://$host/remote.php/dav;
-    }
+	location /.well-known/carddav {
+		return 301 $scheme://$host/remote.php/dav;
+	}
+
+	location /.well-known/caldav {
+		return 301 $scheme://$host/remote.php/dav;
+	}
 }
