--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -66,6 +66,18 @@ services:
       - "traefik.http.routers.nginx-nas.entrypoints=web,websecure"
       - "traefik.http.routers.nginx-nas.tls.certresolver=letsencrypt-flare"
 
+  nginx-vpn:
+    image: nginx:1.25.2
+    restart: unless-stopped
+    container_name: "nginx-vpn"
+    volumes:
+      - ./nginx/nginx-vpn.conf:/etc/nginx/conf.d/default.conf
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.nginx-vpn.rule=Host(`vpn.thibaut-husser.com`, `www.vpn.thibaut-husser.com`)"
+      - "traefik.http.routers.nginx-vpn.entrypoints=web,websecure"
+      - "traefik.http.routers.nginx-vpn.tls.certresolver=letsencrypt-flare"
+
   nginx-proxmox:
     image: nginx:1.25.2
     restart: unless-stopped
